--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <section class="todoapp-control">
         <h1 class="todoapp-title">TodoApp</h1>
         <div class="todoapp-form-wrapper">
-          <form name="addTask" class="todoapp-form">
+          <form name="todoForm" class="todoapp-form">
             <label>
               New task title:
               <input type="text" name="title" />
             </label>
             <label>
-              New task description:
+              New task description(date):
               <input type="text" name="body" />
             </label>
             <button class="mainBtn" type="submit">Create</button>
@@ -32,11 +32,7 @@
       </section>
       <section class="todoapp-tasks container">
 				<ul class="tasks-list">
-					<li class="task-item">
-						<span class="task-list-title">Task title</span>
-						<p class="task-list-descr">Lorem ipsum dolor sit amet.</p>
-						<button type="button" class="deleteBtn">Delete</button>
-					</li>
+					
 				</ul>
 			</section>
     </main>
